--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.5.1",
     "material-react-table": "^1.15.0",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
